feature/ETD-1195-transactions-extending-the-len